[gd_scene load_steps=10 format=2]

[ext_resource path="res://Character/character_blank.png" type="Texture" id=1]
[ext_resource path="res://Character/HealthBar/over.png" type="Texture" id=2]
[ext_resource path="res://Character/HealthBar/progress.png" type="Texture" id=3]
[ext_resource path="res://Character/HealthBar/under.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Dueler/Dueler.gd" type="Script" id=6]
[ext_resource path="res://Hand/Hand.tscn" type="PackedScene" id=7]
[ext_resource path="res://Deck/Deck.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 4
outline_color = Color( 0.501961, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Dueler" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 540 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="Sprite"]
margin_left = -256.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 288.0
max_value = 420.0
value = 69.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.627451, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="Sprite/HealthBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -25.0
margin_right = 68.5
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "69/420"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Node2D" parent="."]

[node name="Hand" parent="." instance=ExtResource( 7 )]
position = Vector2( 960, 1026 )

[node name="Deck" parent="." instance=ExtResource( 8 )]
position = Vector2( 110, 930 )
scale = Vector2( 0.5, 0.5 )

[node name="ReturnTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="card_released" from="Hand" to="." method="_on_Hand_card_released"]
[connection signal="card_drawn" from="Deck" to="." method="_on_PlayerDeck_card_drawn"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_all_completed"]
